Fix for bug #5136(Geometry object corrupted after the query)

sql/item_geofunc.cc:
  We should force geometry's charset to be BINARY